# cargo-offline

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.cargo/: config.toml
src/: cargo_metadata.rs  main.rs  toml_file.rs
