[package]
name = "cargo-offline"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = '0.11.2'
locate-cargo-manifest = '0.2.2'

[dependencies.cargo_toml]
version = '0.13.0'
features = []
optional = true

[dependencies.toml]
version = '0.5.8'
features = ['preserve_order']

[features]
ambassador-where = []
cargo-metadata = ['cargo_toml']
default = [
    'ambassador-where',
    'cargo-metadata',
]
toml-config = []
